force-app/main/default/objects/FlowTestTargetObj__c/FlowTestTargetObj__c.object-meta.xml
<CustomObject>
    <label>FlowTestTargetObj</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>FlowSerial</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FlowTestTargetObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>