force-app/main/default/objects/FlowTestTargetObj__c/fields/FlowTestObj__c.field-meta.xml
<CustomField>
    <fullName>FlowTestObj__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FlowTestObj</label>
    <referenceTo>FlowTestObj__c</referenceTo>
    <relationshipLabel>FlowTestTargetObjs</relationshipLabel>
    <relationshipName>FlowTestTargetObjs</relationshipName>
    <type>Lookup</type>
</CustomField>