force-app/main/default/objects/FlowTestTargetObj__c/fields/IsFlowUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsFlowUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFlowUpdate</label>
    <type>Checkbox</type>
</CustomField>