force-app/main/default/objects/FlowTestTargetObj__c/fields/ProcessCalledFrom__c.field-meta.xml
<CustomField>
    <fullName>ProcessCalledFrom__c</fullName>
    <label>ProcessCalledFrom</label>
    <length>50</length>
    <type>Text</type>
</CustomField>