force-app/main/default/objects/FlowTestTargetObj__c/fields/ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDate__c</fullName>
    <label>ScheduledDate</label>
    <type>DateTime</type>
</CustomField>